--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.InstantGarbageDIsposal">
-
+        <activity
+            android:name=".CreateEventActivity"
+            android:exported="false"
+            android:label="@string/title_activity_create_event"
+            android:theme="@style/Theme.InstantGarbageDIsposal.NoActionBar" />
+        <activity
+            android:name=".OngoingEvents"
+            android:exported="false" />
+        <activity
+            android:name=".UpcomingEventsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_upcoming_events"
+            android:theme="@style/Theme.InstantGarbageDIsposal.NoActionBar" />
         <activity
             android:name=".IssueActivity"
             android:exported="true" />
